--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="style.css" rel="stylesheet">
  </head>
  <header>
- <h1> The Jungle Book </h1>
+ <h1> The Jungle Book1 </h1>
  <h2>Author: Rudyard Kipling<h2>
  </header>
  <nav>
